[tool.poetry]
name = "arcle"
version = "0.2.5.post4"
description = "An ARC Learning Environment built on Gymnasium"
authors = ["Anonymous <xxxxxxxxxx@gmail.com>"]
readme = "docs/README.md"
license = "Apache-2.0"
repository = "https://anonymous.4open.science/r/arcle-6B7F"
packages = [{include = "arcle"}]
exclude = ["arcle/arcs/flask", "arcle/arcs/server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.urls]
"Homepage" = "https://anonymous.4open.science/r/arcle-6B7F"


[tool.poetry.dependencies]
python = ">=3.8"
pygame = "^2.5.1"
gymnasium = ">=0.28.0"
numpy = ">=1.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
